CR-2002-06-11-0: Testsuite: compile_source(): tcl error on connection timeout
                 Bugfix:

EB-2002-06-07-0: Bugfix:    disallow "none" in load_formula and addition
                            tests for the correctness
                 Issue:     #215
                 Bugtraq:   #4673738

EB-2002-06-07-0: Cleanup:   ADOC comments

AH-2002-06-07-1: Bugfix:    Prevent qalter -l res=val on running jobs for 
                            consumable resources to prevent corruption of 
                            consumable managment
                 Issue:     #251
                 Bugtraq:   #4683852

JG-2002-06-07-0: Cleanup:   Replaced %s in messages with macros SFN and SFQ
                            for all libs. Fixed problems with multiply defined
                            messages.
                 Issue:     #252           

JG-2002-06-06-0: Bugfix:    Building Grid Engine with shared libs was broken.

AH-2002-06-05-1: Bugfix:    Fix problem with notify mechanism causing actual
                            termination/suspension signal being delayed 
                            endlessly
                 Issue:     #231
                 Bugtraq:   #4697491

JG-2002-06-05-3: Cleanup:   Replaced %s in messages with macros SFN and SFQ
                            for utilib.
                 Issue:     #252           

JG-2002-06-05-2: Bugfix:    qsub allowed submission of binary files
                 Issue:     #247
                 Bugtraq:   #4696768

JG-2002-06-05-1: Bugfix:    Error handling when reading configuration at 
                            qmaster startup was incomplete and produced 
                            confusing error messages.
                 Issue:     #226
                 Bugtraq:   #4665780

JG-2002-06-05-0: Bugfix:    Load values on HP-UX 11 multiprocessor machines 
                            were incorrect.
                 Issue:     #246

SD-2002-06-03-0: Bugfix:    Fixed GRD 5.1.9 to SGEEE 5.3 upgrade