@@ -1,3 +1,8 @@
+AH-2002-06-11-0: Bugfix:    Complex default value was not used for load thresholds
+                            in cases when no load value was available.
+                 Issue:     #223
+                 Bugtraq:   #4683852
+
 CR-2002-06-11-0: Testsuite: compile_source(): tcl error on connection timeout
                  Bugfix:
 
